stylesheets/main.css
/* ... */
.article-nav-link:hover .article-nav-direction {
  opacity: 1;
}
.article-nav-link:hover .article-nav-title {
  opacity: 1;
}
@media screen and (max-width: 640px) {
  .article-nav-link:nth-child(2)::before {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: block;
    border-top-color: currentColor;
    border-top-style: solid;
    border-top-width: 1px;
    content: '';
    opacity: .2;
  }
}
@media screen and (max-width: 640px) {
  .article-nav-link {
    text-align: center;
  }
}

@media screen and (max-width: 640px) {
  .article-nav-link-half {
    text-align: center;
  }
}
@media screen and (min-width: 641px) {
  .article-nav-link-half {
    padding-bottom: 33px;
  }
}
@media screen and (max-width: 640px) {
  .article-nav-link-half:first-child {
    padding-bottom: 33px;
  }
}

@media screen and (min-width: 640px) {
  .article-nav-link-older {
    padding-right: 20px;
  }
}

@media screen and (min-width: 640px) {
  .article-nav-link-newer {
    padding-left: 20px;
    text-align: right;
  }
}

.article-nav-direction {
  font-size: 13px;
  letter-spacing: .2em;
  text-transform: uppercase;
  opacity: .3;
}

.article-nav-title {
  margin-top: 6px;
  font-size: 18px;
  opacity: .7;
}

.article-comments {
  margin-bottom: 50px;
}
.article-comments .form_fields {
  font-size: 0;
}
.article-comments .form_field_inline {
  display: inline-block;
  width: calc(50% - 10px);
  margin-top: 5px;
  vertical-align: top;
}
.article-comments .form_field_inline:first-child {
  margin-right: 10px;
}
.article-comments .form_field_inline:last-child {
  margin-left: 10px;
}
.article-comments .comments-title {
  margin-bottom: 55px;
  font-weight: 400;
  text-align: center;
}
.article-comments .comment-form-details.is-hidden {
  display: none;
}
.article-comments .comment {
  margin-top: 30px;
}
.article-comments .comment-author {
  font-weight: 600;
}
@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13 / 10), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (-o-min-device-pixel-ratio: 5/4), only screen and (min-resolution: 120dpi) {
  .article-comments .comment-author {
    font-weight: 400;
  }
}
.article-comments .comment-body {
  margin-top: 10px;
}

.content-area {
  -webkit-hyphens: auto;
      -ms-hyphens: auto;
          hyphens: auto;
  word-break: break-word;
  word-wrap: break-word;
  line-height: 1.7;
  color: rgba(0, 0, 0, 0.8);
}
.content-area::after {
  clear: both;
  content: "";
  display: table;
}
.content-area:empty {
  display: none;
}
.content-area.content-item-title h1 {
  text-align: left;
}
.front-page .content-body .content-area {
  margin-bottom: 50px;
}
.site-header .content-area {
  line-height: 1.3;
  letter-spacing: .1em;
}
@media screen and (max-width: 640px) {
  .site-header .content-area {
    font-size: 20px;
  }
}
@media screen and (min-width: 641px) {
  .site-header .content-area {
    font-size: 30px;
  }
}
.page-content .content-area {
  font-size: 18px;
}
@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13 / 10), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (-o-min-device-pixel-ratio: 5/4), only screen and (min-resolution: 120dpi) {
  .page-content .content-area {
    font-weight: 100;
  }
}
.site-footer .content-area {
  font-size: 13px;
}
@media screen and (max-width: 640px) {
  .site-footer .content-area {
    text-align: center;
  }
}
@media screen and (min-width: 641px) {
  .site-footer .content-area {
    text-align: right;
  }
}
@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13 / 10), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (-o-min-device-pixel-ratio: 5/4), only screen and (min-resolution: 120dpi) {
  .site-footer .content-area {
    font-weight: 100;
  }
}
.content-area h1:first-child,
.content-area h2:first-child,
.content-area h3:first-child,
.content-area h4:first-child,
.content-area h5:first-child,
.content-area h6:first-child,
.content-area p:first-child,
.content-area ul:first-child,
.content-area ol:first-child,
.content-area dl:first-child,
.content-area table:first-child,
.content-area pre:first-child,
.content-area code:first-child,
.content-area iframe:first-child,
.content-area table:first-child,
.content-area form:first-child,
.content-area .table-container:first-child,
.content-area .edy-positionable-container-left-block:first-child,
.content-area .edy-positionable-container-center-block:first-child,
.content-area .edy-positionable-container-right-block:first-child,
.content-area .edy-texteditor-container-wrapper-left-block:first-child,
.content-area .edy-texteditor-container-wrapper-center:first-child,
.content-area .edy-texteditor-container-wrapper-right-block:first-child,
.content-area .edy-positionable-container-maxwidth:first-child {
  margin-top: 0;
}
.content-area h1:last-child,
.content-area h2:last-child,
.content-area h3:last-child,
.content-area h4:last-child,
.content-area h5:last-child,
.content-area h6:last-child,
.content-area p:last-child,
.content-area ul:last-child,
.content-area ol:last-child,
.content-area dl:last-child,
.content-area table:last-child,
.content-area pre:last-child,
.content-area code:last-child,
.content-area iframe:last-child,
.content-area table:last-child,
.content-area form:last-child,
.content-area .table-container:last-child,
.content-area .edy-positionable-container-left-block:last-child,
.content-area .edy-positionable-container-center-block:last-child,
.content-area .edy-positionable-container-right-block:last-child,
.content-area .edy-texteditor-container-wrapper-left-block:last-child,
.content-area .edy-texteditor-container-wrapper-center:last-child,
.content-area .edy-texteditor-container-wrapper-right-block:last-child,
.content-area .edy-positionable-container-maxwidth:last-child {
  margin-bottom: 0;
}
/* ... */

